save point 2 comment & post 조회 가능