@@ -8,6 +8,7 @@ import com.sparta.board.entity.Cmt;
 import com.sparta.board.jwt.JwtUtil;
 import com.sparta.board.repository.BoardRepository;
 import com.sparta.board.repository.CmtRepository;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
@@ -21,26 +22,37 @@ public class CmtService {
     private final CmtRepository cmtRepository;
     private final JwtUtil jwtUtil;
     private final BoardRepository boardRepository;
-
-    public CmtResponseDto createcmt(CmtRequestDto cmtRequestDto) {
-
+    @Transactional
+     public CmtResponseDto createcmt(CmtRequestDto cmtRequestDto) {
+//        String username="";
+//        Long id= cmtRequestDto.getPostid();
+//        Cmt cmt= new Cmt(cmtRequestDto,username);
+//        Cmt savecmt=cmtRepository.save(cmt);
+//        Board board = findPost(id);
+//        return new CmtResponseDto(savecmt);
         String username="";
         Long id= cmtRequestDto.getPostid();
         Cmt cmt= new Cmt(cmtRequestDto,username);
         Cmt savecmt=cmtRepository.save(cmt);
-        getcmt(id);
-        return new CmtResponseDto(savecmt);
+         Board board =findPost(id);
+         List<Cmt> list=board.getCommentlist();
+         List<Cmt> updatedCommentList = getcmt(id);
+         list.addAll(updatedCommentList);
+         return new CmtResponseDto(savecmt);
     }
-    public List<CmtResponseDto> getcmt(Long id) {
-        return cmtRepository.findAllBypostid(id).stream().map(CmtResponseDto::new).toList();
+
+    public List<Cmt> getcmt(Long id) {
+        return cmtRepository.findAllBypostid(id)
+                .stream()
+                .map(Cmt::new)
+                .collect(Collectors.toList());
     }
-    public CmtResponseDto updatecmt(Long id, CmtRequestDto cmtRequestDto) {
+     public CmtResponseDto updatecmt(Long id, CmtRequestDto cmtRequestDto) {
         Cmt cmt = findcmt(id);
         cmt.update(cmtRequestDto);
         return new CmtResponseDto(cmt);
     }
-
-    public void deletecmt(Long id) {
+     public void deletecmt(Long id) {
         Cmt cmt =findcmt(id);
         cmtRepository.delete(cmt);
     }
@@ -49,6 +61,10 @@ public class CmtService {
         return  cmtRepository.findById(id).orElseThrow(() ->
                 new IllegalArgumentException("선택한 글은 존재하지 않습니다.")
         );
+    }
+    private Board findPost(Long id){
+        return boardRepository.findById(id).orElseThrow(() ->
+                new IllegalArgumentException("선택한 게시글은 존재하지 않습니다."));
     }
 
 
